# apps/order/controller/orderController.go
@@ -3,6 +3,8 @@ package controller
 import (
 	"BusinessServer/apps/order/models"
 	"BusinessServer/apps/order/service"
+	logWriter "BusinessServer/apps/system/log/service"
+	"BusinessServer/common"
 	controller "BusinessServer/common/abstract/controller"
 	common2 "BusinessServer/common/abstract/models"
 	as "BusinessServer/common/abstract/service"
@@ -36,7 +38,7 @@ func newModel() *models.SwustOrder {
 // @Success		200		{object}	common.ResponseModel
 // @router			/api/order/getById [Get]
 func (api *orderController) GetApi(context *gin.Context) {
-	api.GetById(context, getService(), newModel())
+	api.GetById(context, getService(), &models.OrderVO{})
 }
 
 // @title			增加采购信息
@@ -90,9 +92,33 @@ func (api *orderController) UpdateApi(context *gin.Context) {
 // @Success		200		{object}	common.PageResponseModel
 // @router			/api/order/page [Post]
 func (api *orderController) PageApi(context *gin.Context) {
-	var req models.OrderQueryRequest
+	api.Page(context, getService(), &models.OrderQueryRequest{})
+}
+
+// @title			审批采购信息
+// @version		1.0
+// @Tags			Order-采购信息管理相关接口
+// @description	审批采购信息
+// @accept			json
+// @Produce		json
+// @Param			token	header		string						false	"用户凭证"
+// @Param			req		body		models.ApproveReq	false	"待审批订单ID"
+// @Success		200		{object}	common.ResponseModel
+// @router			/api/order/approve [Post]
+func (api *orderController) Approve(context *gin.Context) {
+	var req models.ApproveReq
+	response := common2.NewResponse(context)
 	if err := context.ShouldBindJSON(&req); err != nil {
-		common2.NewResponse(context).ErrorWithMsg(err.Error())
+		response.ErrorWithMsg(err.Error())
+		return
 	}
-	api.Page(context, getService(), &req)
+	service.GetOrderService().Approve(req)
+	//写入日志
+	status := "同意"
+	if req.Status == common.APPROVE_REFUSE {
+		status = "拒绝"
+	}
+	logWriter.WriteLog(context, common.LOG_EVENT_OA, status+"采购申请")
+
+	response.Success()
 }
