# apps/statistic/models/statisModel.go
@@ -1,7 +1,6 @@
 package models
 
-type AssetTypeModel struct {
-	//Name     *string `gorm:"column:name;type:varchar(25)" json:"name"` // 房间名称
-	TypeName *string `gorm:"column:type_name" json:"typeName"` //类型名称
-	Quantity int     `gorm:"column:quantity" json:"quantity"`  //数量
+type StatisticModel struct {
+	Name  string `gorm:"column:name" json:"name"`   //名称
+	Value int    `gorm:"column:value" json:"value"` //数量
 }
