# docs/swagger.json
@@ -80,6 +80,47 @@
                 }
             }
         },
+        "/api/assets/deprecate": {
+            "post": {
+                "description": "根据资产IDs删除资产信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset-资产设备管理雄相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    },
+                    {
+                        "description": "待删除资产IDs",
+                        "name": "ids",
+                        "in": "body",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseModel"
+                        }
+                    }
+                }
+            }
+        },
         "/api/assets/export": {
             "post": {
                 "description": "导出资产信息",
@@ -212,7 +253,7 @@
                         "in": "header"
                     },
                     {
-                        "description": "待删除资产IDs",
+                        "description": "待查询资产信息",
                         "name": "req",
                         "in": "body",
                         "schema": {
@@ -499,6 +540,44 @@
                         "in": "body",
                         "schema": {
                             "$ref": "#/definitions/models.OrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/order/approve": {
+            "post": {
+                "description": "审批采购信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order-采购信息管理相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    },
+                    {
+                        "description": "待审批订单ID",
+                        "name": "req",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.ApproveReq"
                         }
                     }
                 ],
@@ -1053,7 +1132,61 @@
                 }
             }
         },
-        "/api/statistic/countassetsbytype": {
+        "/api/statistic/countAssetsApplyTrend": {
+            "get": {
+                "description": "获取资产申请趋势统计",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Statistic-统计相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatisticModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/statistic/countAssetsByStatus": {
+            "get": {
+                "description": "根据资产状态统计",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Statistic-统计相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatisticModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/statistic/countAssetsByType": {
             "get": {
                 "description": "根据资产类型统计",
                 "produces": [
@@ -1074,7 +1207,61 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AssetTypeModel"
+                            "$ref": "#/definitions/models.StatisticModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/statistic/countAssetsDepTrend": {
+            "get": {
+                "description": "获取资产报废趋势统计",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Statistic-统计相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatisticModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/statistic/countOrderDetail": {
+            "get": {
+                "description": "获取资产报废趋势统计",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Statistic-统计相关接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户凭证",
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatisticModel"
                         }
                     }
                 }
@@ -1648,15 +1835,27 @@
                 }
             }
         },
-        "models.AssetTypeModel": {
+        "models.ApproveReq": {
             "type": "object",
             "properties": {
-                "quantity": {
-                    "description": "数量",
+                "approveTime": {
+                    "description": "审批时间",
+                    "type": "string"
+                },
+                "orderId": {
+                    "description": "采购单ID",
+                    "type": "string"
+                },
+                "reason": {
+                    "description": "驳回理由",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "审核意见 -1 拒绝 1 同意",
                     "type": "integer"
                 },
-                "typeName": {
-                    "description": "Name     *string `gorm:\"column:name;type:varchar(25)\" json:\"name\"` // 房间名称",
+                "userId": {
+                    "description": "审批人ID",
                     "type": "string"
                 }
             }
@@ -1892,6 +2091,10 @@
                     "description": "UserID     *string    `gorm:\"column:user_id;type:varchar(19)\" json:\"userID\"`                       // 责任人",
                     "type": "string"
                 },
+                "comment": {
+                    "description": "备注",
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -1993,6 +2196,19 @@
                 "phoneNumber": {
                     "description": "手机号",
                     "type": "string"
+                }
+            }
+        },
+        "models.StatisticModel": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "名称",
+                    "type": "string"
+                },
+                "value": {
+                    "description": "数量",
+                    "type": "integer"
                 }
             }
         },
